--- a/style.css
+++ b/style.css
@@ -36,21 +36,25 @@ a{text-decoration: none;
 
 /****** Navar ******/
 nav{
+    width: 100%;
+    height: 55px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    margin: 55px 75px 15px 90px;
+    margin-top: 55px;
+    margin-bottom: 15px;
     padding: 5px 15px;
+    /* border: solid; */
 }
 .nav-title h3{
     color:#4a2626 ;
-    margin-bottom: 15px;
 }
 .nav-menu ul{
     display: flex;
 }
 .nav-menu li{
     margin-right: 25px;
+    
 }
 .nav-menu li a{
     padding: 5px;
@@ -65,21 +69,20 @@ nav{
 .front-news{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 30px 75px 15px 90px;
+    justify-content: center;
+    width: 100%;
     padding: 5px 15px;
+    margin-bottom: 15px;
 }
-.front-news:hover{
-    padding: 3px 13px;
-    border: solid 2px ;
-    border-image: linear-gradient(blue,white);
-    border-image-slice: 70;
-    background-color:azure;
+ .front-news:hover{
+    background-color:rgb(236, 241, 241);
     transition: background 0.4s;
         
-}
+} 
 .front-news-title{
-    width: 49%;
+    width: 48%;
+    /* border: solid; */
+    margin-right: 25px;
 }
 .front-news-title p{
     font-weight:600;
@@ -92,6 +95,7 @@ nav{
     border-color: rgb(27, 32, 48);
     border-radius: 50%;
     overflow: hidden;
+    width: 24%;
 }
 .front-news-img img:hover{
     transform: scale(1.3);
@@ -100,19 +104,21 @@ nav{
 }
 
 /**** ** Company Section***** */
-.company{
-    margin: 30px 75px 15px 90px;
+/* .company{
+   width: 100%;
+   margin-bottom: 15px;
 }
 .company-list{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 5px 15px;
+    width: 100%;
+    height: 75px;
 }
 .company-list li{
-    padding: 5px;
-    /* border: solid; */
-    width: 20%;
+    width: 120px;
+    height: 50px;
+
 }
 .company-list li:hover{
     transform: scale(1.3);
@@ -124,7 +130,7 @@ nav{
     border-image: linear-gradient(rgba(192, 204, 218, 0.1),rgba(192, 204, 218, 0.6),rgba(192, 204, 218, 0.1));
     border-image-slice:1;
 
-}
+} */
 
 /******
  Main[Popular Collection]
@@ -133,13 +139,20 @@ nav{
     font-family: 'Dongle', sans-serif;
     font-size: 20px;
     line-height: 30px;
+    width: 100%;
+    /* height: 1426px; */
+    display: flex;
+    justify-content: center;
+    /* border: solid; */
+    margin: 15px 0;
+    padding: 10px 0px;
  }
  main p{
      line-height: 20px;
  }
  .popular-collection{
     /* border: solid; */
-    margin: 30px 75px 15px 90px;
+width: 85%;
  }
  .popular-collection h1{
      text-align: center;
@@ -204,17 +217,24 @@ transition: box-shadow 0.2s;
 /****** Other Site ******/
 .other-site{
     width: 100%;
+    /* height: 325px; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid;
+    border-image: linear-gradient(#0000ff94,#001ffff2,#0000ff94);
+    border-image-slice: 1;
 }
+
 .other-site-img img{
     border-radius: 5px;
 }
 .other-site-detail{
-    line-height: 30px;
+    line-height: 32px;
+    padding: 10px;
 }
 .other-site span{
     color: rgb(218, 25, 25);
